Legg til settings tab som kan velge lys/mørk modus

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,7 @@
 
 @layer base {
 	:root {
+		background-color: rgb(var(--bg));
 		--bg: 170, 255, 170;
 		--primary: 136, 255, 136;
 		--secondary: 0, 102, 0;
@@ -11,10 +12,25 @@
 	}
 	@media (prefers-color-scheme: dark) {
 		:root {
+			background-color: rgb(var(--bg));
 			--bg: 0, 20, 0;
 			--primary: 0, 36, 3;
 			--secondary: 0, 50, 3;
 			--text: 255, 255, 255;
 		}
 	}
+}
+
+.theme-dark {
+	--bg: 0, 20, 0;
+	--primary: 0, 36, 3;
+	--secondary: 0, 50, 3;
+	--text: 255, 255, 255;
+}
+
+.theme-light {
+	--bg: 170, 255, 170;
+	--primary: 136, 255, 136;
+	--secondary: 0, 102, 0;
+	--text: 0, 0, 0;
 }
