--- a/src/app.css
+++ b/src/app.css
@@ -4,16 +4,18 @@
 
 @layer base {
 	:root {
-		background-color: rgb(var(--bg));
-		--bg: 170, 255, 170;
+		--bg-light: 170, 255, 170;
+		--bg-dark: 0, 20, 0;
+
+
+		--bg: var(--bg-light);
 		--primary: 136, 255, 136;
 		--secondary: 0, 102, 0;
 		--text: 0, 0, 0;
 	}
 	@media (prefers-color-scheme: dark) {
 		:root {
-			background-color: rgb(var(--bg));
-			--bg: 0, 20, 0;
+			--bg: var(--bg-dark);
 			--primary: 0, 36, 3;
 			--secondary: 0, 50, 3;
 			--text: 255, 255, 255;
@@ -22,14 +24,14 @@
 }
 
 .theme-dark {
-	--bg: 0, 20, 0;
+	--bg: var(--bg-dark);
 	--primary: 0, 36, 3;
 	--secondary: 0, 50, 3;
 	--text: 255, 255, 255;
 }
 
 .theme-light {
-	--bg: 170, 255, 170;
+	--bg: var(--bg-light);
 	--primary: 136, 255, 136;
 	--secondary: 0, 102, 0;
 	--text: 0, 0, 0;
